--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>PSD to Live</title>
 </head>
 <body>
@@ -170,5 +171,6 @@
       <p></p>
     </section>
   </footer>
+  
 </body>
 </html>
