added html header

--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
 </head>
 <body>
   <header class="header">
-    <nav>
+    <nav class="nav__top">
       <img src="" alt="" class="img__left">
-      <ul>
-        <li><a href="">HOME</a></li>
-        <li><a href="">ABOUT</a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
+      <ul class="navbar__right">
+        <li><a href="#home">HOME</a></li>
+        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#expertise">EXPERTISE</a></li>
+        <li><a href="#teams"></a>TEAMS</li>
+        <li><a href="#works"></a>WORKS</li>
+        <li><a href="#people"></a>PEOPLE SAY</li>
+        <li><a href="#contact"></a>CONTACT</li>
       </ul>
     </nav>
     <div>
-      <h1></h1>
-      <p></p>
-      <button></button>
+      <h1>We Are Awesome Creative Agency</h1>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa molestias cumque neque harum animi, temporibus vero aperiam veritatis, excepturi saepe delectus tempore dolore aliquam ipsam vitae iure quae. Maiores, sint.</p>
+      <button>LEARN MORE</button>
     </div>
   </header>
 
