--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
       </ul>
     </nav>
     <div>
-      <h1>We Are Awesome Creative Agency</h1>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa molestias cumque neque harum animi, temporibus vero aperiam veritatis, excepturi saepe delectus tempore dolore aliquam ipsam vitae iure quae. Maiores, sint.</p>
-      <button>LEARN MORE</button>
+      <h1 class="header__h1">We Are Awesome Creative Agency</h1>
+      <p class="header__para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa molestias cumque neque harum animi, temporibus vero aperiam veritatis, excepturi saepe delectus tempore dolore aliquam ipsam vitae iure quae. Maiores, sint.</p>
+      <button class="header__button">LEARN MORE</button>
     </div>
   </header>
 
