added all the icons html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header class="header">
     <nav class="nav__top">
-      <img src="" alt="" class="img__left">
+      <img src="/images/png/logo.png" alt="" class="img__left">
       <ul class="navbar__right">
         <li><a href="#home">HOME</a></li>
         <li><a href="#about">ABOUT</a></li>
@@ -29,7 +29,7 @@
 
   <main>
     <section>
-      <img src="" alt="" class="logo2">
+      <img src="/images/png/logo-big.png" alt="" class="logo2">
       <div>
         <h2></h2>
         <p></p>
@@ -136,28 +136,28 @@
   <footer>
     <section class="flex2">
       <div>
-        <img src="" alt="logo">
+        <img src="/images/png/logo.png" alt="logo">
         <p></p>
       </div>
       <div>
         <h3></h3>
-      <a href="http://"><img src="" alt=""></a>
+      <a href="http://"><img src="/images/png/big104.png" alt="mapdot"></a>
       <p></p>
-      <a href="http://"><img src="" alt=""></a>
+      <a href="http://"><img src="/images/png/phone351.png" alt=""></a>
       <p></p>
       </div>
       <div>
         <h3></h3>
         <form action="">
           <label for="Subscribe"></label>
-          <button></button>
+          <button><img src="/images/png/paper122.png" alt="arrow"></button>
         </form>
-        <a href="http://"><img src="" alt=""></a>
-        <a href="http://"><img src="" alt=""></a>
-        <a href="http://"><img src="" alt=""></a>
-        <a href="http://"><img src="" alt=""></a>
-        <a href="http://"><img src="" alt=""></a>
-        <a href="http://"><img src="" alt=""></a>
+        <a href="http://"><img src="/images/png/facebook.png" alt="facebook"></a>
+        <a href="http://"><img src="/images/png/twitter.png" alt="twitter"></a>
+        <a href="http://"><img src="/images/png/dribbble.png" alt="dribble"></a>
+        <a href="http://"><img src="/images/png/instagram.png" alt="instagram"></a>
+        <a href="http://"><img src="/images/png/gplus.png" alt="googleplus"></a>
+        <a href="http://"><img src="/images/png/youtube.png" alt="youtube"></a>
       </div>
     </section>
     <section>
