added html icons part 2

--- a/index.html
+++ b/index.html
@@ -31,14 +31,15 @@
     <section>
       <img src="/images/png/logo-big.png" alt="" class="logo2">
       <div>
-        <h2></h2>
-        <p></p>
-        <button></button>
+        <h2>OUR STORY</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At placeat natus, illum amet harum officiis adipisci repudiandae assumenda nobis hic voluptatem animi! Ut delectus ratione aut optio quas numquam sequi?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam eius deserunt mollitia soluta nostrum sapiente sint reiciendis perferendis voluptatem officiis, repellat illo. Aut rem eos vitae, ab veritatis reiciendis debitis?</p>
+        <button>LEARN MORE</button>
       </div>
     </section>
 
     <section>
-      <a href="http://">link to our story</a>
+      <a href="http://"><img src="/images/png/play.png" alt="play"></a>
       <h3></h3>
     </section>
 
@@ -50,32 +51,32 @@
       </div>
       <div class="grid__container">
         <div>
-          <img src="" alt="">
+          <img src="/images/png/screen.png" alt="screen">
           <h4></h4>
           <p></p>
         </div>
         <div>
-          <img src="" alt="">
+          <img src="/images/png/pen.png" alt="pen">
           <h4></h4>
           <p></p>
         </div>
         <div>
-          <img src="" alt="">
+          <img src="/images/png/mobile.png" alt="mobile">
           <h4></h4>
           <p></p>
         </div>
         <div>
-          <img src="" alt="">
+          <img src="/images/png/graph.png" alt="graph">
           <h4></h4>
           <p></p>
         </div>
         <div>
-          <img src="" alt="">
+          <img src="/images/png/gameboy.png" alt="gameboy">
           <h4></h4>
           <p></p>
         </div>
         <div>
-          <img src="" alt="">
+          <img src="/images/png/heart.png" alt="heart">
           <h4></h4>
           <p></p>
         </div>
@@ -127,7 +128,16 @@
       <div>
         <h2></h2>
         <div class="grid2">
-          <img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt=""><img src="" alt="">
+          <img src="/images/png/Zara_Logo.png" alt="zara">
+          <img src="/images/png/1280px-Barneys_New_York_Logo.png" alt="barneys">
+          <img src="/images/png/Calvin_klein_logo.png" alt="calvin">
+          <img src="/images/png/Converse_logo.png" alt="converse">
+          <img src="/images/png/1280px-Levi's_logo.png" alt="levis">
+          <img src="/images/png/Logo_of_Mango_(new).png" alt="mango">
+          <img src="/images/png/1280px-Gucci_Logo.png" alt="gucci">
+          <img src="/images/png/1280px-Logo_NIKE.png" alt="nike">
+          <img src="/images/png/Puma_Logo.png" alt="puma">
+          <img src="/images/png/Billabong.png" alt="billabong">
         </div>
       </div>
     </section>
