added comments on html

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>PSD to Live</title>
 </head>
 <body>
-  <header class="header">
+  <!-- here is the header - logo and navbar -->
+  <header class="header"> 
     <nav class="nav__top">
       <img src="/images/png/logo.png" alt="" class="img__left">
       <ul class="navbar__right">
@@ -20,6 +21,7 @@
         <li><a href="#contact"></a>CONTACT</li>
       </ul>
     </nav>
+    <!-- header's heading and paragraph + button -->
     <div>
       <h1 class="header__h1">We Are Awesome Creative Agency</h1>
       <p class="header__para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa molestias cumque neque harum animi, temporibus vero aperiam veritatis, excepturi saepe delectus tempore dolore aliquam ipsam vitae iure quae. Maiores, sint.</p>
@@ -28,21 +30,22 @@
   </header>
 
   <main>
-    <section>
+    <!-- Second part of website : logo + our story + button -->
+    <section class="flex-cont1">
       <img src="/images/png/logo-big.png" alt="" class="logo2">
-      <div>
-        <h2>OUR STORY</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At placeat natus, illum amet harum officiis adipisci repudiandae assumenda nobis hic voluptatem animi! Ut delectus ratione aut optio quas numquam sequi?</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam eius deserunt mollitia soluta nostrum sapiente sint reiciendis perferendis voluptatem officiis, repellat illo. Aut rem eos vitae, ab veritatis reiciendis debitis?</p>
-        <button>LEARN MORE</button>
+      <div class="flex-item2">
+        <h2 class="flex-item2__h2">OUR STORY</h2>
+        <p class="flex-item2__para1">Lorem ipsum dolor sit amet consectetur adipisicing elit. At placeat natus, illum amet harum officiis adipisci repudiandae assumenda nobis hic voluptatem animi! Ut delectus ratione aut optio quas numquam sequi?</p>
+        <p class="flex-item2__para2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam eius deserunt mollitia soluta nostrum sapiente sint reiciendis perferendis voluptatem officiis, repellat illo. Aut rem eos vitae, ab veritatis reiciendis debitis?</p>
+        <button class="flex-item2__button">LEARN MORE</button>
       </div>
     </section>
-
+    <!-- third part : link to video and h3 -->
     <section>
       <a href="http://"><img src="/images/png/play.png" alt="play"></a>
       <h3></h3>
     </section>
-
+    <!-- fourth part : our expertise with the grid container with the icons-->
     <section>
       <div>
         <h2></h2>
@@ -83,6 +86,8 @@
       </div>
     </section>
 
+    <!-- fifth part : our teams with flex cont of 4 images -->
+
     <section>
       <h3></h3>
       <p></p>
@@ -114,7 +119,10 @@
       </div>
     </section>
 
+    <!-- Sixth part : form and logos -->
+
     <section>
+      <!-- the form -->
       <div>
         <h2></h2>
         <form action="">
@@ -125,6 +133,7 @@
           <button></button>
         </form>
       </div>
+      <!-- the logos -->
       <div>
         <h2></h2>
         <div class="grid2">
@@ -143,12 +152,16 @@
     </section>
   </main>
 
+  <!-- footer -->
+
   <footer>
+    <!-- first section of footer with logo, adress+phone and social media icons -->
     <section class="flex2">
       <div>
         <img src="/images/png/logo.png" alt="logo">
         <p></p>
       </div>
+
       <div>
         <h3></h3>
       <a href="http://"><img src="/images/png/big104.png" alt="mapdot"></a>
@@ -156,6 +169,7 @@
       <a href="http://"><img src="/images/png/phone351.png" alt=""></a>
       <p></p>
       </div>
+
       <div>
         <h3></h3>
         <form action="">
@@ -170,6 +184,8 @@
         <a href="http://"><img src="/images/png/youtube.png" alt="youtube"></a>
       </div>
     </section>
+
+    <!-- second section of footer with nav and p -->
     <section>
       <nav>
         <ul>
