changes to html

--- a/index.html
+++ b/index.html
@@ -43,67 +43,67 @@
 
     <section>
       <div>
-        <h2></h2>
-        <p></p>
-        <img src="" alt="line">
+        <h2>EXPERTISE</h2>
+        <title class="title_1">Lorem ipsum dolor sit amet proin gravida nibh vel velit</title>
+        <img src="" alt="separator">
       </div>
       <div class="grid__container">
         <div>
+          <img> WEB DESIGN & DEVELOPMENT</h4>
+          <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
+        </div>
+        <div>
           <img src="" alt="">
-          <h4></h4>
-          <p></p>
+          <h4>BRANDING IDENTITY</h4>
+          <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </div>
         <div>
           <img src="" alt="">
           <h4></h4>
-          <p></p>
+          <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </div>
         <div>
           <img src="" alt="">
           <h4></h4>
-          <p></p>
+          <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </div>
         <div>
           <img src="" alt="">
           <h4></h4>
-          <p></p>
+          <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </div>
         <div>
           <img src="" alt="">
           <h4></h4>
-          <p></p>
-        </div>
-        <div>
-          <img src="" alt="">
-          <h4></h4>
-          <p></p>
+          <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </div>
       </div>
     </section>
 
     <section>
-      <h3></h3>
-      <p></p>
+      <h3>MEET OUR AMAZING TEAM</h3>
+      <title class="title_1">Lorem ipsum dolor sit amet proin gravida nibh vel velit</title>
+      <img src="" alt="separator">
       <div class="flex-cont">
         <div>
           <img src="" alt="">
           <h4></h4>
-          <p></p>
+          <title class="title_2"></title>
         </div>
         <div>
           <img src="" alt="">
           <h4></h4>
-          <p></p>
+          <title class="title_2"></title>
         </div>
         <div>
           <img src="" alt="">
           <h4></h4>
-          <p></p>
+          <title class="title_2"></title>
         </div>
         <div>
           <img src="" alt="">
           <h4></h4>
-          <p></p>
+          <title class="title_2"></title>
         </div>
       </div>
       <div>
