html my part 1/2

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
 <body>
   <!-- here is the header - logo and navbar -->
   <header class="header"> 
-    <nav class="nav__top">
-      <img src="/images/png/logo.png" alt="" class="img__left">
+
+    <div class="logo1left">
+      <img src="/images/png/menu.png" alt="" class="img__left">
+      <h1>tajam</h1>
+    </div>
+
+    <nav>
       <ul class="navbar__right">
         <li><a href="#home">HOME</a></li>
         <li><a href="#about">ABOUT</a></li>
@@ -88,34 +93,35 @@
 
     <!-- fifth part : our teams with flex cont of 4 images -->
 
-    <section>
-      <h3></h3>
-      <p></p>
-      <div class="flex-cont">
-        <div>
+    <section class="meet-team">
+      <h3 class="meet-team__h3">MEET OUR AMAZING TEAM</h3>
+      <p class="meet-team__para">Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
+
+      <div class="flex-cont2">
+        <div class="flexcont2-item">
           <img src="" alt="">
-          <h4></h4>
-          <p></p>
+          <h4>TANIA BOTTERMAN</h4>
+          <p>CEO & FOUNDER</p>
         </div>
-        <div>
+        <div class="flexcont2-item">
           <img src="" alt="">
-          <h4></h4>
-          <p></p>
+          <h4>CHRISTINA VEKRI</h4>
+          <p>ENGINEERING</p>
         </div>
-        <div>
+        <div class="flexcont2-item">
           <img src="" alt="">
-          <h4></h4>
-          <p></p>
+          <h4>TANIA BOTTERMAN</h4>
+          <p>DESIGNER</p>
         </div>
-        <div>
+        <div class="flexcont2-item">
           <img src="" alt="">
-          <h4></h4>
-          <p></p>
+          <h4>CHRISTINA VEKRI</h4>
+          <p>MARKETING</p>
         </div>
       </div>
-      <div>
-        <p></p>
-        <button></button>
+      <div class="flex-cont3">
+        <p class="flexcont3-para">Become part of our dream team, let's join us !</p>
+        <button class="flexcont3-button">WE ARE HIRING</button>
       </div>
     </section>
 
@@ -156,13 +162,18 @@
 
   <footer>
     <!-- first section of footer with logo, adress+phone and social media icons -->
-    <section class="flex2">
-      <div>
-        <img src="/images/png/logo.png" alt="logo">
+    <section class="flexfooter">
+
+      <div class="flexfooter1">
+        <div>
+          <img src="/images/png/logo.png" alt="logo">
+          
+        </div>
+
         <p></p>
       </div>
 
-      <div>
+      <div class="flexfooter2">
         <h3></h3>
       <a href="http://"><img src="/images/png/big104.png" alt="mapdot"></a>
       <p></p>
@@ -170,7 +181,7 @@
       <p></p>
       </div>
 
-      <div>
+      <div class="flexfooter3">
         <h3></h3>
         <form action="">
           <label for="Subscribe"></label>
