mypart html 2/2 of today

--- a/index.html
+++ b/index.html
@@ -165,26 +165,27 @@
     <section class="flexfooter">
 
       <div class="flexfooter1">
-        <div>
-          <img src="/images/png/logo.png" alt="logo">
-          
+        <div class="logofooter">
+          <img src="/images/png/logo.png" alt="logo" class="logoimgfoot">
+          <h1 class="logoh1foot">tajam</h1>
         </div>
 
-        <p></p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, eligendi, minus odit quasi quos nemo accusamus nisi omnis sapiente natus delectus quam itaque quisquam sint, cumque quo? Voluptates, maiores dolorem.</p>
       </div>
 
       <div class="flexfooter2">
-        <h3></h3>
+        <h3>OUR STUDIO</h3>
       <a href="http://"><img src="/images/png/big104.png" alt="mapdot"></a>
-      <p></p>
+      <address>Ruko cucruk, JI. Radio luar dalem jos No. 12-13, Kalideres - Jakarta Barat 11 480 - Indonesia</address>
       <a href="http://"><img src="/images/png/phone351.png" alt=""></a>
-      <p></p>
+      <p>(+62)21-2224 3333</p>
       </div>
 
       <div class="flexfooter3">
-        <h3></h3>
-        <form action="">
-          <label for="Subscribe"></label>
+        <h3>STAY IN TOUCH</h3>
+        <form action="/action_page.php">
+          <label for="email"></label>
+          <input type="email" id="contact" name="email" placeholder="Subscribe to our newsletter">
           <button><img src="/images/png/paper122.png" alt="arrow"></button>
         </form>
         <a href="http://"><img src="/images/png/facebook.png" alt="facebook"></a>
@@ -201,11 +202,11 @@
       <nav>
         <ul>
           <li>HELP</li>
-          <li></li>
-          <li></li>
+          <li>TERMS & CONDITIONS</li>
+          <li>PRIVACY</li>
         </ul>
       </nav>
-      <p></p>
+      <p>Copyright 2015 - Tajem Creative</p>
     </section>
   </footer>
   
