--- a/index.html
+++ b/index.html
@@ -4,35 +4,42 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./fonts/HammersmithOne/HammersmithOne-Regular.ttf", >
   <title>PSD to Live</title>
 </head>
+
 <body>
-  <!-- here is the header - logo and navbar -->
-  <header class="header"> 
-
-    <div class="logo1left">
-      <img src="/images/png/menu.png" alt="" class="img__left">
-      <h1>tajam</h1>
-    </div>
-
-    <nav>
-      <ul class="navbar__right">
-        <li><a href="#home">HOME</a></li>
-        <li><a href="#about">ABOUT</a></li>
-        <li><a href="#expertise">EXPERTISE</a></li>
-        <li><a href="#teams"></a>TEAMS</li>
-        <li><a href="#works"></a>WORKS</li>
-        <li><a href="#people"></a>PEOPLE SAY</li>
-        <li><a href="#contact"></a>CONTACT</li>
-      </ul>
-    </nav>
-    <!-- header's heading and paragraph + button -->
-    <div>
-      <h1 class="header__h1">We Are Awesome Creative Agency</h1>
-      <p class="header__para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa molestias cumque neque harum animi, temporibus vero aperiam veritatis, excepturi saepe delectus tempore dolore aliquam ipsam vitae iure quae. Maiores, sint.</p>
-      <button class="header__button">LEARN MORE</button>
-    </div>
-  </header>
+  <div id="banner">
+    <header class="header">
+      <!-- here is the header - logo and navbar -->
+      <div class="nav">
+        <div class="logo1left">
+          <img src="/images/png/menu.png" alt="" class="img__left">
+          <h1>tajam</h1>
+        </div>
+        <div class="navbar">
+          <nav>
+            <ul class="navbar__right">
+              <li><a href="#home">HOME</a></li>
+              <li><a href="#about">ABOUT</a></li>
+              <li><a href="#expertise">EXPERTISE</a></li>
+              <li><a href="#teams"></a>TEAMS</li>
+              <li><a href="#works"></a>WORKS</li>
+              <li><a href="#people"></a>PEOPLE SAY</li>
+              <li><a href="#contact"></a>CONTACT</li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    
+      <!-- header's heading and paragraph + button -->
+      <div>
+        <h1 class="header__h1">We Are Awesome Creative Agency</h1>
+        <p class="header__para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa molestias cumque neque harum animi, temporibus vero aperiam veritatis, excepturi saepe delectus tempore dolore aliquam ipsam vitae iure quae. Maiores, sint.</p>
+        <button class="header__button">LEARN MORE</button>
+      </div>
+    </header>
+  </div>
 
   <main>
     <!-- Second part of website : logo + our story + button -->
