text added and container pixel sizes commented in

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   <title>PSD to Live</title>
 </head>
 
+
+<!-- 669px height 1600 wide -->
 <body>
   <div id="banner">
+    <!-- here is the header - logo and navbar -->
     <header class="header">
-      <!-- here is the header - logo and navbar -->
       <div class="nav">
         <div class="logo1left">
           <img src="/images/png/menu.png" alt="" class="img__left">
@@ -32,7 +34,8 @@
         </div>
       </div>
     
-      <!-- header's heading and paragraph + button -->
+
+      <!-- header's heading and paragraph + button 449px height 1600px wide-->
       <div>
         <h1 class="header__h1">We Are Awesome Creative Agency</h1>
         <p class="header__para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa molestias cumque neque harum animi, temporibus vero aperiam veritatis, excepturi saepe delectus tempore dolore aliquam ipsam vitae iure quae. Maiores, sint.</p>
@@ -40,9 +43,11 @@
       </div>
     </header>
   </div>
+  
 
+
+  <!-- Second part of website : logo + our story + button - 551px height -->
   <main>
-    <!-- Second part of website : logo + our story + button -->
     <section class="flex-cont1">
       <img src="/images/png/logo-big.png" alt="" class="logo2">
       <div class="flex-item2">
@@ -55,9 +60,12 @@
     <!-- third part : link to video and h3 -->
     <section>
       <a href="http://"><img src="/images/png/play.png" alt="play"></a>
-      <h3></h3>
+      <h3>WATCH OUR STORY</h3>
     </section>
-    <!-- fourth part : our expertise with the grid container with the icons-->
+
+
+
+    <!-- fourth part : our expertise with the grid container with the icons 753px height -->
     <section>
       <div>
         <h2>EXPERTISE</h2>
@@ -79,28 +87,28 @@
         </div>
         <div>
           <img src="/images/png/mobile.png" alt="mobile">
-          <h4></h4>
+          <h4>MOBILE APP</h4>
           <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </div>
         <div>
           <img src="/images/png/graph.png" alt="graph">
-          <h4></h4>
+          <h4>SEARCH ENGINE OPTIMIZATION</h4>
           <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </div>
         <div>
           <img src="/images/png/gameboy.png" alt="gameboy">
-          <h4></h4>
+          <h4>GAME DEVELOPMENT</h4>
           <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </div>
         <div>
           <img src="/images/png/heart.png" alt="heart">
-          <h4></h4>
+          <h4>MADE WITH LOVE</h4>
           <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </div>
       </div>
     </section>
 
-    <!-- fifth part : our teams with flex cont of 4 images -->
+    <!-- fifth part : our teams with flex cont of 4 images 710px height-->
 
     <section class="meet-team">
       <h3 class="meet-team__h3">MEET OUR AMAZING TEAM</h3>
@@ -111,21 +119,25 @@
           <img src="" alt="">
           <h4>TANIA BOTTERMAN</h4>
           <p>CEO & FOUNDER</p>
+          <img src="" alt="line">
         </div>
         <div class="flexcont2-item">
           <img src="" alt="">
           <h4>CHRISTINA VEKRI</h4>
           <p>ENGINEERING</p>
+          <img src="" alt="line">
         </div>
         <div class="flexcont2-item">
           <img src="" alt="">
           <h4>TANIA BOTTERMAN</h4>
           <p>DESIGNER</p>
+          <img src="" alt="line">
         </div>
         <div class="flexcont2-item">
           <img src="" alt="">
           <h4>CHRISTINA VEKRI</h4>
           <p>MARKETING</p>
+          <img src="" alt="line">
         </div>
       </div>
       <div class="flex-cont3">
@@ -134,8 +146,8 @@
       </div>
     </section>
 
-    <!-- Sixth part : form and logos -->
 
+    <!-- Sixth part : form and logos 686 px-->
     <section>
       <!-- the form -->
       <div>
@@ -166,11 +178,12 @@
       </div>
     </section>
   </main>
+  
+
 
   <!-- footer -->
-
   <footer>
-    <!-- first section of footer with logo, adress+phone and social media icons -->
+    <!-- first section of footer with logo, adress+phone and social media icons 392px PLEASE NOTE THERE IS A SHADOW AT THE BOTTOM OF THIS CARD -->
     <section class="flexfooter">
 
       <div class="flexfooter1">
@@ -206,7 +219,7 @@
       </div>
     </section>
 
-    <!-- second section of footer with nav and p -->
+    
     <section>
       <nav>
         <ul>
