added some comments on html

--- a/index.html
+++ b/index.html
@@ -165,26 +165,25 @@
   <footer>
     <!-- first section of footer with logo, adress+phone and social media icons -->
     <section class="flexfooter">
-
+      <!-- first element tajam-->
       <div class="flexfooter1">
         <div class="logofooter">
           <img src="/images/png/logo.png" alt="logo" class="logoimgfoot">
-          <h1 class="logoh1foot">tajam</h1>
+          <h4 class="logoh1foot">tajam</h4>
         </div>
-
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, eligendi, minus odit quasi quos nemo accusamus nisi omnis sapiente natus delectus quam itaque quisquam sint, cumque quo? Voluptates, maiores dolorem.</p>
       </div>
-
+      <!-- second element adress and phone-->
       <div class="flexfooter2">
-        <h3>OUR STUDIO</h3>
+        <h4 class="flexfooter2h3">OUR STUDIO</h4>
       <a href="http://"><img src="/images/png/big104.png" alt="mapdot"></a>
-      <address>Ruko cucruk, JI. Radio luar dalem jos No. 12-13, Kalideres - Jakarta Barat 11 480 - Indonesia</address>
-      <a href="http://"><img src="/images/png/phone351.png" alt=""></a>
+      <p>Ruko cucruk, JI. Radio luar dalem jos No. 12-13, Kalideres - Jakarta Barat 11 480 - Indonesia</p>
+      <a href="http://"><img src="/images/png/phone351.png" alt="phone"></a>
       <p>(+62)21-2224 3333</p>
       </div>
-
+      <!-- third element stay in touch -->
       <div class="flexfooter3">
-        <h3>STAY IN TOUCH</h3>
+        <h4 class="footer3h3">STAY IN TOUCH</h4>
         <form action="/action_page.php">
           <label for="email"></label>
           <input type="email" id="contact" name="email" placeholder="Subscribe to our newsletter">
@@ -208,7 +207,7 @@
           <li>PRIVACY</li>
         </ul>
       </nav>
-      <p>Copyright 2015 - Tajem Creative</p>
+      <p>Copyright &copy2023 - Tajem Creative</p>
     </section>
   </footer>
   
