changes html finish

--- a/index.html
+++ b/index.html
@@ -5,57 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/
-    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Roboto:wght@300;400;900&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/
-<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com%22%3E/
-<link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Roboto:wght@100&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Roboto:wght@300;400;900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/
+  <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
   <title>PSD to Live</title>
 </head>
-
-
-<!-- 669px height 1600 wide -->
 <body>
-  <div id="banner">
-    <!-- here is the header - logo and navbar -->
-    <header class="header">
-      <div class="nav">
-        <div class="logo1left">
-          <img src="/images/png/menu.png" alt="" class="img__left">
-          <h1>tajam</h1>
-        </div>
-        <div class="navbar">
-          <nav>
-            <ul class="navbar__right">
-              <li><a href="#home">HOME</a></li>
-              <li><a href="#about">ABOUT</a></li>
-              <li><a href="#expertise">EXPERTISE</a></li>
-              <li><a href="#teams"></a>TEAMS</li>
-              <li><a href="#works"></a>WORKS</li>
-              <li><a href="#people"></a>PEOPLE SAY</li>
-              <li><a href="#contact"></a>CONTACT</li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-    
+  <!-- here is the header - logo and navbar -->
+  <header class="header"> 
 
-      <!-- header's heading and paragraph + button 449px height 1600px wide-->
-      <div>
-        <h1 class="header__h1">We Are Awesome Creative Agency</h1>
-        <p class="header__para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa molestias cumque neque harum animi, temporibus vero aperiam veritatis, excepturi saepe delectus tempore dolore aliquam ipsam vitae iure quae. Maiores, sint.</p>
-        <button class="header__button">LEARN MORE</button>
-      </div>
-    </header>
-  </div>
-  
+    <div class="logo1left">
+      <img src="/images/png/menu.png" alt="" class="img__left">
+      <h1>tajam</h1>
+    </div>
 
+    <nav>
+      <ul class="navbar__right">
+        <li><a href="#home">HOME</a></li>
+        <li><a href="#https://www.w3schools.com/tags/att_input_required.aspabout">ABOUT</a></li>
+        <li><a href="#expertise">EXPERTISE</a></li>
+        <li><a href="#teams"></a>TEAMS</li>
+        <li><a href="#works"></a>WORKS</li>
+        <li><a href="#people"></a>PEOPLE SAY</li>
+        <li><a href="#contact"></a>CONTACT</li>
+      </ul>
+    </nav>
+    <!-- header's heading and paragraph + button -->
+    <div>
+      <h1 class="header__h1">We Are Awesome Creative Agency</h1>
+      <p class="header__para">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Culpa molestias cumque neque harum animi, temporibus vero aperiam veritatis, excepturi saepe delectus tempore dolore aliquam ipsam vitae iure quae. Maiores, sint.</p>
+      <button class="header__button">LEARN MORE</button>
+    </div>
+  </header>
 
-  <!-- Second part of website : logo + our story + button - 551px height -->
   <main>
+    <!-- Second part of website : logo + our story + button -->
     <section class="flex-cont1">
       <img src="/images/png/logo-big.png" alt="" class="logo2">
       <div class="flex-item2">
@@ -68,12 +53,9 @@
     <!-- third part : link to video and h3 -->
     <section>
       <a href="http://"><img src="/images/png/play.png" alt="play"></a>
-      <h3>WATCH OUR STORY</h3>
+      <h3></h3>
     </section>
-
-
-
-    <!-- fourth part : our expertise with the grid container with the icons 753px height -->
+    <!-- fourth part : our expertise with the grid container with the icons-->
     <section>
       <div>
         <h2>EXPERTISE</h2>
@@ -95,28 +77,28 @@
         </div>
         <div>
           <img src="/images/png/mobile.png" alt="mobile">
-          <h4>MOBILE APP</h4>
+          <h4></h4>
           <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </div>
         <div>
           <img src="/images/png/graph.png" alt="graph">
-          <h4>SEARCH ENGINE OPTIMIZATION</h4>
+          <h4></h4>
           <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </div>
         <div>
           <img src="/images/png/gameboy.png" alt="gameboy">
-          <h4>GAME DEVELOPMENT</h4>
+          <h4></h4>
           <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </div>
         <div>
           <img src="/images/png/heart.png" alt="heart">
-          <h4>MADE WITH LOVE</h4>
+          <h4></h4>
           <p>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet Aenean.</p>
         </div>
       </div>
     </section>
 
-    <!-- fifth part : our teams with flex cont of 4 images 710px height-->
+    <!-- fifth part : our teams with flex cont of 4 images -->
 
     <section class="meet-team">
       <h3 class="meet-team__h3">MEET OUR AMAZING TEAM</h3>
@@ -127,25 +109,21 @@
           <img src="" alt="">
           <h4>TANIA BOTTERMAN</h4>
           <p>CEO & FOUNDER</p>
-          <img src="" alt="line">
         </div>
         <div class="flexcont2-item">
           <img src="" alt="">
           <h4>CHRISTINA VEKRI</h4>
           <p>ENGINEERING</p>
-          <img src="" alt="line">
         </div>
         <div class="flexcont2-item">
           <img src="" alt="">
           <h4>TANIA BOTTERMAN</h4>
           <p>DESIGNER</p>
-          <img src="" alt="line">
         </div>
         <div class="flexcont2-item">
           <img src="" alt="">
           <h4>CHRISTINA VEKRI</h4>
           <p>MARKETING</p>
-          <img src="" alt="line">
         </div>
       </div>
       <div class="flex-cont3">
@@ -154,8 +132,8 @@
       </div>
     </section>
 
+    <!-- Sixth part : form and logos -->
 
-    <!-- Sixth part : form and logos 686 px-->
     <section>
       <!-- the form -->
       <div>
@@ -186,12 +164,11 @@
       </div>
     </section>
   </main>
-  
-
 
   <!-- footer -->
+
   <footer>
-    <!-- first section of footer with logo, adress+phone and social media icons 392px PLEASE NOTE THERE IS A SHADOW AT THE BOTTOM OF THIS CARD -->
+    <!-- first section of footer with logo, adress+phone and social media icons -->
     <section class="flexfooter">
       <!-- first element tajam-->
       <div class="flexfooter1">
@@ -226,16 +203,16 @@
       </div>
     </section>
 
-    
-    <section>
-      <nav>
-        <ul>
-          <li>HELP</li>
-          <li>TERMS & CONDITIONS</li>
-          <li>PRIVACY</li>
+    <!-- second section of footer with nav and p -->
+    <section class="footersection2">
+      <nav class="navfooter">
+        <ul class="listfooter">
+          <li><a href="#">HELP</a></li>
+          <li><a href="#">TERMS & CONDITIONS</a></li>
+          <li><a href="#">PRIVACY</a></li>
         </ul>
       </nav>
-      <p>Copyright &copy2023 - Tajem Creative</p>
+      <p class="Copyright">Copyright &copy2023 - Tajem Creative</p>
     </section>
   </footer>
   
