--- a/index.html
+++ b/index.html
@@ -160,11 +160,14 @@
       <!-- the form -->
       <div>
         <h2></h2>
-        <form action="">
-          <label for="name"></label>
+        <form action="/action_page.php">
+          <label for="name">Name:</label>
+          <input type="text" id="name"
+          name="name" required>
           <label for="Email"></label>
           <label for="Subject"></label>
           <textarea name="Your Message" id="" cols="30" rows="10"></textarea>
+          <input type="submit">
           <button></button>
         </form>
       </div>
