made the logo on top

--- a/index.html
+++ b/index.html
@@ -13,24 +13,27 @@
 </head>
 <body>
   <!-- here is the header - logo and navbar -->
-  <header class="header"> 
+  <header> 
 
-    <div class="logo1left">
-      <img src="/images/png/menu.png" alt="" class="img__left">
-      <h1>tajam</h1>
+    <div class="top__nav">
+
+      <div class="logo1left">
+        <img src="/images/png/logo.png" alt="" class="img__left">
+        <p>tajam</p>
+      </div>
+
+      <nav>
+        <ul class="navbar__right">
+          <li><a href="#home">HOME</a></li>
+          <li><a href="#https://www.w3schools.com/tags/att_input_required.aspabout">ABOUT</a></li>
+          <li><a href="#expertise">EXPERTISE</a></li>
+          <li><a href="#teams"></a>TEAMS</li>
+          <li><a href="#works"></a>WORKS</li>
+          <li><a href="#people"></a>PEOPLE SAY</li>
+          <li><a href="#contact"></a>CONTACT</li>
+        </ul>
+      </nav>
     </div>
-
-    <nav>
-      <ul class="navbar__right">
-        <li><a href="#home">HOME</a></li>
-        <li><a href="#https://www.w3schools.com/tags/att_input_required.aspabout">ABOUT</a></li>
-        <li><a href="#expertise">EXPERTISE</a></li>
-        <li><a href="#teams"></a>TEAMS</li>
-        <li><a href="#works"></a>WORKS</li>
-        <li><a href="#people"></a>PEOPLE SAY</li>
-        <li><a href="#contact"></a>CONTACT</li>
-      </ul>
-    </nav>
     <!-- header's heading and paragraph + button -->
     <div>
       <h1 class="header__h1">We Are Awesome Creative Agency</h1>
