--- a/index.html
+++ b/index.html
@@ -50,11 +50,15 @@
         <button class="flex-item2__button">LEARN MORE</button>
       </div>
     </section>
-    <!-- third part : link to video and h3 -->
-    <section>
+
+
+    <!-- third part : link to video and h3 550 X 1600-->
+    <section id="story">
       <a href="http://"><img src="/images/png/play.png" alt="play"></a>
-      <h3></h3>
+      <h3>WATCH OUR STORY</h3>
     </section>
+
+
     <!-- fourth part : our expertise with the grid container with the icons-->
     <section>
       <div>
